Fixed right aligned block position on the article page

--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -201,7 +201,7 @@ img {
 
   :global(.img-align-right.width-50) {
     @include media-breakpoint-up(xl) {
-      margin-right: -16.6666%;
+      margin-right: -8.3333%;
     }
   }
 
